user and camera token authentication logic

--- a/runtime/example-context.yaml
+++ b/runtime/example-context.yaml
@@ -1,8 +1,13 @@
-# webhook account detail
+# required field
 ACCOUNT_SID: AC00000000000000000000000000000000
-API_KEY: SK00000000000000000000000000000000
-API_SECRET: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+AUTH_TOKEN: 00000000000000000000000000
+
+# Common
+USER_PINCODES:
+  usera: "203455"
 
 # used by Authenticator
+API_KEY: SK00000000000000000000000000000000
+API_SECRET: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 SERVICE_SID: IS000000000000000000000000000000
 TOKEN_TTL: 3600 # in seconds
