--- a/runtime/example-context.yaml
+++ b/runtime/example-context.yaml
@@ -5,9 +5,10 @@ AUTH_TOKEN: 00000000000000000000000000
 # Common
 USER_PINCODES:
   usera: "203455"
-
-# used by Authenticator
 API_KEY: SK00000000000000000000000000000000
 API_SECRET: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 SERVICE_SID: IS000000000000000000000000000000
 TOKEN_TTL: 3600 # in seconds
+
+# used by AlertGenerator
+ALERT_FROM_NUMBER : 003725000000
