--- a/pi/package.json
+++ b/pi/package.json
@@ -13,6 +13,7 @@
     "opencv": "^6.0.0",
     "raspicam": "^0.2.13",
     "request": "^2.81.0",
+    "twilio-common": "^0.1.6",
     "twilio-sync": "^0.5.6"
   },
   "repository": {
