--- a/angular/package.json
+++ b/angular/package.json
@@ -23,9 +23,6 @@
   "homepage": "https://github.com/twilio/wireless-co-pilot#readme",
   "devDependencies": {},
   "dependencies": {
-    "angular": "^1.6.4",
-    "angular-bluebird": "0.0.1",
-    "angular-route": "^1.6.4",
     "bootstrap": ">=3.0.2",
     "bootstrap-webpack": "^0.0.6",
     "css-loader": "^0.28.1",
@@ -38,7 +35,6 @@
     "grunt-webpack": "^3.0.0",
     "html-loader": "^0.4.5",
     "imports-loader": "^0.7.1",
-    "jquery": "^3.2.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "moment": "^2.18.1",
@@ -51,6 +47,7 @@
     "twilio-sync": "^0.5.5",
     "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-vendor-chunk-plugin": "^1.0.0"
   }
 }
