--- a/angular/package.json
+++ b/angular/package.json
@@ -26,6 +26,7 @@
     "bootstrap": ">=3.0.2",
     "bootstrap-webpack": "^0.0.6",
     "css-loader": "^0.28.1",
+    "cuint": "^0.2.2",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
@@ -44,7 +45,7 @@
     "path": "^0.12.7",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
-    "twilio-sync": "^0.5.5",
+    "twilio-sync": "^0.5.10",
     "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5",
